Dictionary form working with all standard CRUD actions

--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -2,4 +2,6 @@
 
 <p><%= @entry.definition %></p>
 
-<p>Language: <%= @entry.language %>
+<p>Language: <%= @entry.language %></p>
+
+<%= link_to "Edit", edit_entry_path(@entry)%>
