--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,1 +1,5 @@
-<p>Edit me @<%= params[:id] %>!</p>
+<h1>Edit "<%= @entry.word %>":</h1>
+
+<%= render 'input_form', entry: @entry %>
+
+<%= link_to 'Delete', entry_path(@entry), method: :delete, data: {confirm: "Are you sure you want to delete '#{@entry.word}'? This cannot be undone!"} %>
