--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,1 +1,3 @@
-<p>Here's where we'll make the things so we can do the stuff</p>
+<h1>Create a new entry!</h1>
+
+<%= render 'input_form', entry: @entry %>
